--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="valBtnRegistrarUsuario">Registrar Usuario</string>
     <string name="valBtnListarUsuarios">Listar Usuarios</string>
     <string name="valSwNotificar">¿Notificar?</string>
+    <string name="mensajeRegistroCorrecto">Persona Registrada Correctamente</string>
 </resources>
